--- a/CompositionGradientColorAnimationRepo/MainPage.xaml
+++ b/CompositionGradientColorAnimationRepo/MainPage.xaml
@@ -6,5 +6,5 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d">
 
-    <Grid x:Name="Root" SizeChanged="OnRootSizeChanged" />
+    <Grid x:Name="Root" />
 </Page>
